added prompt input for OSS projects